<resources>
    <string name="app_name">TechNews</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>


    <string name="menu_techcrunch">techcrunch</string>
    <string name="menu_hacker_news">hacker-news</string>
    <string name="menu_ars_technica">ars-technica</string>
    <string name="menu_techradar">techradar</string>
    <string name="menu_the_verge">the-verge</string>
    <string name="menu_google_news">google-news</string>
    <string name="menu_all_sources">All News</string>
    <string name="all_sources">techcrunch,hacker-news,ars-technica,techradar,the-verge,google-news</string>
    <string name="title">title</string>
    <string name="published_time">publish_time</string>
    <string name="article_image">article_image</string>
    <string name="no_articles">no articles</string>

    <string name="title_activity_web_view">WebViewActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="no_internet">No internet connection</string>
    <string name="browse_more_categories">browse more categories</string>
    <string name="article_saved">Article saved</string>
    <string name="bookmark_deleted">bookmark deleted</string>
    <string name="title_activity_settings">About</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="action_about">About</string>
    <string name="action_bookmarks">bookmarks</string>
    <string name="version_number">version 1.2.209</string>
    <string name="app_version_title">App version</string>
    <string name="data_source">Data Source</string>
    <string name="privacy_policy">privacy policy</string>
    <string name="bookmarks_label">Bookmarks</string>

    <string name="privacy_policy_url">https://sites.google.com/view/topsports-policy/home</string>
    <string name="about_app">Technews app is a news aggregation app majoring in technology news.We query newsapi.org API and present the news from supported categories in an elegant way.</string>
    <string name="about">About</string>
    <string name="version_key">version</string>
    <string name="source_key">source</string>
    <string name="source_link">https://newsapi.org</string>
    <string name="privacy_key">privacy_url</string>
    <string name="rate_key">rate_app</string>
    <string name="rate">Rate</string>
    <string name="nav_header">TechNews World</string>
    <string name="news_at_one_place">News at one place</string>
    <string name="saved_articles_will_appear_here">saved articles will appear here</string>
    <string name="connetion_error">Connection error</string>
    <string name="app_id">ca-app-pub-8840949117868676~5768025056</string>
    <string name="interstitial">ca-app-pub-8840949117868676/5014729477</string>
    <string name="interstitial_test">ca-app-pub-3940256099942544/1033173712</string>
</resources>
