<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="310dp"
    android:layout_marginStart="4dp"
    android:layout_marginEnd="4dp"
    android:layout_marginTop="4dp"
    card_view:cardUseCompatPadding="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:contentDescription="@string/article_image"
            android:scaleType="centerCrop"
            android:backgroundTint="#969292"
            android:background="#969292" />


        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/imageView"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="10dp"
            android:maxLines="2"
            android:text="@string/title"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="100"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_below="@id/title"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/published_time"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/published_time"
                android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                android:layout_weight="90"
                android:textAlignment="textStart"
                android:textSize="15sp"
                android:gravity="start" />
            <TextView
                android:id="@+id/bookmark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableRight="@drawable/ic_bookmark_add"
                android:layout_weight="10"
                android:textAlignment="textEnd"
                android:gravity="end" />
        </LinearLayout>

    </RelativeLayout>

</androidx.cardview.widget.CardView>